[gd_scene load_steps=13 format=3 uid="uid://c028enp1nttok"]

[ext_resource type="Script" path="res://Carpeta de Scripts/leaderBoard.gd" id="1_qspgv"]
[ext_resource type="Shader" path="res://shaderMovimiento.gdshader" id="2_c4cat"]
[ext_resource type="Texture2D" uid="uid://wlrafh3twveu" path="res://Assets a Usar/Clouds/Clouds 7/1.png" id="3_1fkyw"]
[ext_resource type="Texture2D" uid="uid://dnjbdymkaqjfd" path="res://Assets a Usar/Clouds/Clouds 7/2.png" id="4_8uhko"]
[ext_resource type="Texture2D" uid="uid://ce38qojhor2j5" path="res://Assets a Usar/Clouds/Clouds 7/3.png" id="5_6m37k"]
[ext_resource type="Texture2D" uid="uid://oinr40qaugpx" path="res://Assets a Usar/Clouds/Clouds 7/4.png" id="6_j6n5c"]
[ext_resource type="FontFile" uid="uid://dxaiig8i87vno" path="res://Stacked pixel.ttf" id="7_2aok4"]
[ext_resource type="Texture2D" uid="uid://c7d7pnfekcwfu" path="res://Assets a Usar/CasualGameButtonsVol02/PNG/CGB02-red_S_btn.png" id="8_f2blw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54xj8"]
shader = ExtResource("2_c4cat")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18wva"]
shader = ExtResource("2_c4cat")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djh52"]
shader = ExtResource("2_c4cat")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vt0f1"]
shader = ExtResource("2_c4cat")
shader_parameter/scroll_speed = 0.1

[node name="leaderboardUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qspgv")

[node name="Fondo Inicio" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_54xj8")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("3_1fkyw")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer2"]
texture_repeat = 2
material = SubResource("ShaderMaterial_18wva")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("4_8uhko")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_djh52")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("5_6m37k")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer4"]
texture_repeat = 2
material = SubResource("ShaderMaterial_vt0f1")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("6_j6n5c")

[node name="Contenedor Regresar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 136.0
offset_bottom = 148.0

[node name="Regresar" type="Button" parent="Contenedor Regresar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_2aok4")
theme_override_font_sizes/font_size = 85
text = " â†©"
icon = ExtResource("8_f2blw")
flat = true
icon_alignment = 1

[node name="LeaderboardContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 176.0
offset_right = 1664.0
offset_bottom = 952.0

[node name="Label" type="Label" parent="LeaderboardContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_2aok4")
theme_override_font_sizes/font_size = 100
text = "Tabla de puntajes"
horizontal_alignment = 1

[node name="Button" type="Button" parent="LeaderboardContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_2aok4")
theme_override_font_sizes/font_size = 40
text = "Refresh
"

[node name="http_request" type="HTTPRequest" parent="."]

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 304.0
offset_right = 1664.0
offset_bottom = 872.0
theme_override_fonts/font = ExtResource("7_2aok4")
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="Contenedor Regresar/Regresar" to="." method="_on_regresar_pressed"]
[connection signal="request_completed" from="http_request" to="." method="_on_request_completed"]
